fix z-index of statusmsg box

--- a/css/gladbooks.css
+++ b/css/gladbooks.css
@@ -1460,7 +1460,8 @@ div.statusmsg {
   right: 5%;
   top: 1em;
   width: 33%;
-  margin-right: 1px; }
+  margin-right: 1px;
+  z-index: 10; }
 
 .info {
   background-color: white;
