--- a/sass/includes/misc.scss
+++ b/sass/includes/misc.scss
@@ -1067,6 +1067,7 @@ div.statusmsg {
 	top: 1em;
 	width: 33%;
 	margin-right: 1px;
+	z-index: 10;
 }
 
 .info {
